Update 'java-quarkus-wuslccft' component image to: quay.io/sjmrhtap/java-quarkus-wuslccft:3f68300a7b58ecc61292ac694d2863a4ffd892d4@sha256:be9fcae00d7a8f795fdedbdb14fc45f85fc7b351ec9ed6ae7b1dbaab274ef24b

--- a/components/java-quarkus-wuslccft/overlays/development/deployment-patch.yaml
+++ b/components/java-quarkus-wuslccft/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: java-quarkus-wuslccft
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.7
-        name: container-image  
+        - image: quay.io/sjmrhtap/java-quarkus-wuslccft:3f68300a7b58ecc61292ac694d2863a4ffd892d4@sha256:be9fcae00d7a8f795fdedbdb14fc45f85fc7b351ec9ed6ae7b1dbaab274ef24b
+          name: container-image
